  [bug introduced in coreutils-7.2]

  md5sum --check --ignore-missing no longer treats files with checksums
  starting with "00" as missing.  This also affects sha*sum.
  [bug introduced with the --ignore-missing feature in coreutils-8.25]

  nl now resets numbering for each page section rather than just for each page.
  [This bug was present in "the beginning".]

  sort -h -k now works even in locales that use blank as thousands separator.

  stty --help no longer outputs extraneous gettext header lines
  for translated languages. [bug introduced in coreutils-8.24]

  stty "sane" again sets "susp" to ^z on Solaris, and leaves "swtch" undefined.
  [This bug previously fixed only on some older Solaris systems]

  seq now immediately exits upon write errors.
  [This bug was present in "the beginning".]

  tail -F now continues to process initially untailable files that are replaced
  by a tailable file.  This was handled correctly when inotify was available,
  and is now handled correctly in all cases.
  [bug introduced in fileutils-4.0h]

  tail -f - 'untailable file' will now terminate when there is no more data
  to read from stdin.  Previously it behaved as if --retry was specified.
  [This bug was present in "the beginning".]

  tail -f 'remote file' will now avoid outputting repeated data on network
  file systems that misreport file sizes through stale metadata.
  [This bug was present in "the beginning" but exacerbated in coreutils-8.24]

  tail -f --retry 'missing file' will now process truncations of that file.
  Previously truncation was ignored thus not outputting new data in the file.
  [bug introduced in coreutils-5.3.0]

  tail -f will no longer continually try to open inaccessible files,
  only doing so if --retry is specified.
  [This bug was present in "the beginning".]

  yes now handles short writes, rather than assuming all writes complete.
  [bug introduced in coreutils-8.24]

** Changes in behavior
